src/routes/(app)/fotos/upload/style.scss
.image-upload--form {
	input[type='file'] {
		display: none;
	}

	.buttons {
		display: flex;
		align-items: center;

		gap: 1rem;
	}

	.creator {
		display: grid;
		grid-template-columns: repeat(3, 1fr);

		margin-top: 1rem;

		gap: 1rem;

		@media (max-width: 600px) {
			input[type='text'] {
				grid-column: span 2;
			}

			grid-template-columns: 1fr 1fr;
		}
	}
}

p {
	margin-top: 1rem;
}

.image-upload--preview {
	// This is an div, with an button and an img inside
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;

	max-width: 100%;
	max-height: 100%;

	border: 1px solid #ddd;
	border-radius: 5px;
	background: #fff;
	cursor: pointer;
	overflow: hidden;
	position: relative;
	transition: all 0.3s ease-in-out;

	padding: 1rem;
	margin: 1rem;

	&:hover {
		border: 1px solid #333;
	}

	img {
		object-fit: contain;
	}

	button {
		margin-bottom: 1rem;
	}
}

